<resources>
    <string name="app_name">Magic</string>

    <!-- Placeholders -->
    <string name="turn">Turn</string>
    <string name="life">Life</string>
    <string name="log">Game action log</string>
    <string name="opp_creatures">Opposing creatures</string>
    <string name="library">Library</string>
    <string name="graveyard">Graveyard</string>

    <!-- Buttons -->
    <string name="switch_player">Switch</string>
    <string name="next_step">Next Step</string>
    <string name="confirm_attack">Confirm Attack</string>

    <!-- Player names -->
    <string name="alice">Alice</string>
    <string name="bob">Bob</string>

    <!-- For life total display, text colors for HTML -->
    <string name="alice_color">blue</string>
    <string name="bob_color">red</string>

    <!-- ex: Turn 1 (newline) <b>Alice</b> -->
    <string name="unformat_turn_display">Turn %1$d&lt;br>&lt;b>%2$s&lt;/b></string>
    <!-- ex: <font color='blue'>Alice</font> (newline) <b>20</b> -->
    <string name="unformat_life">&lt;font color=\'%1$s\'>%2$s&lt;/font>&lt;br>&lt;b>%3$d&lt;/b></string>

    <!-- Step names -->
    <string name="step_untap">Untap step - your permanents untap</string>
    <string name="step_upkeep">Upkeep step - things stated to happen during upkeep, happen</string>
    <string name="step_draw">Draw step - you draw a card</string>
    <string name="step_precombat_main">Precombat main phase - you can cast spells and play lands now</string>
    <string name="step_start_of_combat">Start of combat step - last chance for your opponent to act before your creatures attack</string>
    <string name="step_declare_attackers">Declare attackers step - select creatures to attack your opponent</string>
    <string name="step_declare_blockers">Declare blockers step - your opponent selects creatures to block</string>
    <string name="step_combat_damage">Combat damage step - creatures deal damage</string>
    <string name="step_end_of_combat">End of combat step - last chance for your opponent to act before your next main phase</string>
    <string name="step_postcombat_main">Postcombat main phase - you can cast spells and play lands</string>
    <string name="step_end">End step - last chance for your opponent to act this turn</string>

    <!-- Alert dialog strings -->
    <string name="dialog_attackers">Confirm attackers?</string>
    <string name="dialog_positive">Yes, go to declare blockers</string>
    <string name="dialog_neutral">Yes, stay in this step</string>
    <string name="dialog_negative">Cancel</string>

</resources>
